rocks-sys/rocks/c.h

  /* db.h */

  typedef struct rocks_column_family_descriptor_t rocks_column_family_descriptor_t ;
  typedef struct rocks_column_family_handle_t     rocks_column_family_handle_t     ;
  typedef struct rocks_db_t                       rocks_db_t                       ;
  /* options.h */
  typedef struct rocks_column_family_options_t       rocks_column_family_options_t;
  typedef struct rocks_dbpath_t                    rocks_dbpath_t;
  typedef struct rocks_dboptions_t                 rocks_dboptions_t;
  typedef struct rocks_options_t                   rocks_options_t ;
  typedef struct rocks_readoptions_t               rocks_readoptions_t;
  typedef struct rocks_writeoptions_t              rocks_writeoptions_t;
  typedef struct rocks_flushoptions_t              rocks_flushoptions_t;
  typedef struct rocks_compactionoptions_t         rocks_compactionoptions_t;
  typedef struct rocks_compactrangeoptions_t       rocks_compactrangeoptions_t;
  typedef struct rocks_ingestexternalfileoptions_t rocks_ingestexternalfileoptions_t;
  /* status.h */
  typedef struct rocks_status_t {
    int code;
    int sub_code;
    const char *state;
  } rocks_status_t;