rocks-sys/rocks/ctypes.hpp

  /* db */

  struct rocks_column_family_descriptor_t { DB*                 rep; };
  struct rocks_column_family_handle_t     { ColumnFamilyHandle* rep; };
  struct rocks_db_t                       { DB*                 rep; };
  /* options */ 
  struct rocks_column_family_options_t       { ColumnFamilyOptions       rep; };
  struct rocks_dbpath_t                    { DbPath                    rep; };
  struct rocks_options_t                   { Options                   rep; };
  struct rocks_readoptions_t               {
    ReadOptions rep;
    Slice upper_bound; // stack variable to set pointer to in ReadOptions
  };
  struct rocks_writeoptions_t              { WriteOptions              rep; };
  struct rocks_flushoptions_t              { FlushOptions              rep; };
  struct rocks_ingestexternalfileoptions_t { IngestExternalFileOptions rep; };